k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stammdaten
  labels:
    app: ase-stammdaten
spec:
  selector:
    app: ase-stammdaten
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
