k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stammdaten
  labels:
    app: ase-stammdaten
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - host: sau-portal.de
      http:
        paths:
          - path: /team-11-api
            pathType: Prefix
            backend:
              service:
                name: stammdaten
                port:
                  number: 8080
